second challenge done

--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style2.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +22,18 @@
 
 
     <!-- YOUR CODE DOWN HERE . Remove the title and start coding  -->
+    <div class="container">
 
+        <div class="card">
+            <img src="/assets/pika-profile.png" alt="Pikatchu" class="pika">
+            <h1 class="heading">Pikatchu</h1>
+            <p class="pargraph">A uper cute pokemon with a super power of making thunder out of it's cheeks.</p>
+        </div>
+        
+    </div>
+  
+   
+   
 </body>
 
 </html>
