--- a/challenge4/index.html
+++ b/challenge4/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style4.css">
     <title>CSS challenge</title>
 </head>
 
@@ -29,8 +29,8 @@
             <div class="movie-details-container">
                 <div class="movie-shadow"></div>
                 <div class="descriptions">
-                    <p class="movie-title">Movie Name</p>
-                    <p>Some description</p>
+                    <h1 class="movie-title"> Movie Name </h1>
+                    <p> Some descriptions</p>
                 </div>
             </div>
         </div>
